# opus-composer-trust-pipeline

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
cli/: client.py  main.py
cli/commands/: metrics.py  system.py
cli/display/: formatting.py
docs/: mcp.cursor.json.example
harness/: checkpoint.sh  clear-metrics.sh  dispatch.sh  graphify_bridge.py  ground-truth.sh  land.sh  ledger.sh  mcp_server.py  reconcile.sh  run.sh
harness/lib/: log-opus.sh
heldout/T-0002/: manifest.json  test_heldout_signals.py
heldout/T-1001/: test_heldout_signals.py
heldout/T-RESERVE-DEMO/: test_reserve.py
ophar/: __init__.py  __main__.py  bootstrap.py  launcher.py  mcp_entry.py  setup_cmd.py
scripts/: commit-and-push.sh  install.sh  setup-fixtures.sh
server/: config.py  requirements.txt
server/models/: __init__.py
server/routers/: ledger.py  settings.py  tasks.py
server/services/: dispatch.py  registry.py
server/ws/: events.py
state/: STATE.md
tasks/: T-0001.json  T-0002.json
tests/: anti-cheat.sh  checkpoint.sh  graphify-bridge.sh  heldout-reserve.sh  heldout.sh  iterate-heldout.sh  metrics.sh  orchestrate.sh  reconcile.sh  route.sh  scope-guard.sh  smoke.sh
